# mgp-seal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/mgp-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/mgp-sdk/src/: lib.rs  types.rs
crates/mgp-sdk/src/adapters/: docker.rs  git.rs  mod.rs  pypi.rs  raw_url.rs
crates/mgp-sdk/src/shape/: mod.rs  registry.rs
crates/mgp-sdk/src/validate/: connector_v1.rs  mod.rs
crates/mgp-sdk/tests/: adapters_test.rs  shape_test.rs  types_roundtrip_test.rs  validate_test.rs
crates/mgp-seal/: CHANGELOG.md  Cargo.toml  README.md
crates/mgp-seal/src/: key.rs  lib.rs  seal.rs  trust.rs
crates/mgp-seal/tests/: ed25519_test.rs  seal_test.rs
src/: ed25519.rs  lib.rs
