[workspace]
resolver = "2"
members = [
    "crates/mgp-seal",
    "crates/mgp-sdk",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/Cloto-dev/mgp-rs"
homepage = "https://github.com/Cloto-dev/mgp-rs"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
